--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 			<h1 class="text-center">Crystals Collector</h1>
 
-			<h2 class="text-center">Instruction to Play</h2>
+			<h2 class="text-center">Instructions to Play</h2>
 
 			<p class="text-center">
 				<ul>
@@ -40,7 +40,7 @@
 				</ul>    
 			</p>
 			<p class="text-center">
-				If you are able to match your total score with the randomly displayed number, you will win. Otherwise, you will lose the game and game will reset. 
+				If you are able to match your total score with randomly displayed number, you will win. Otherwise, you will lose and game will reset. 
 			</p>
 
 		</div>
@@ -51,7 +51,7 @@
 			<!-- first column for random number -->
 			<div class="col-md-3" id="numberSection">
 				<h3 class="text-center" id="random">Match Number:</h3>
-				<h1 class="numberBox text-center" id="randomNumber">123</h1>
+				<h1 class="numberBox text-center" id="randomNumber">111</h1>
 			</div>
 
 			<!-- second column for buttons -->
